objects/Company_Ownership__c.object
<CustomObject>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>% Ownership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Application__c</fullName>
        <label>Partner Application</label>
        <referenceTo>Partner_Application__c</referenceTo>
        <relationshipLabel>Company Ownerships</relationshipLabel>
        <relationshipName>Company_Ownerships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Person_Firm__c</fullName>
        <label>Person/Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Company Ownership</label>
    <nameField>
        <label>Company Ownership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>